--- a/Invoices/Views/Shared/_Layout.cshtml
+++ b/Invoices/Views/Shared/_Layout.cshtml
@@ -19,8 +19,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3">
             <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/Images/logo.jpg" style="width: 100px"/>
+                </a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Invoices App</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
